[tool.poetry]
name = "bench-analysis"
version = "0.1.0"
description = ""
authors = ["Anon"]
readme = "README.md"
packages = [{include = "bench_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.23.3"
pandas = "^2.0.2"
plotly = "^5.15.0"
ipywidgets = "^8.0.6"
nbformat = "^5.9.0"
kaleido = "0.2.1"
tabulate = "^0.9.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
