[package]
name = "bencher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
chrono = "0.4.24"
anyhow = "1.0.70"
regex = "1.7.3"
cargo_metadata = "0.15.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"
itertools = "0.10.5"
thiserror = "1.0.40"
tempfile = "3.5.0"
seec = { path = "../../crates/seec", features = ["bench-api"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
seec-channel = {path = "../../crates/seec-channel"}
tokio = {version = "1.28.2", features = ["full"]}
remoc = "0.10.3"
