[package]
name = "bitpolymul"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robin Hundt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpolymul-sys = {path = "../bitpolymul-sys"}
aligned-vec = {path = "../aligned-vec"}

[dev-dependencies]
rand = "0.8.5"