[package]
name = "gmw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_integration_tests = ["tracing-subscriber", "anyhow", "funty"]

[dependencies]
async-trait = "0.1.53"
async-stream = "0.3.3"
bitvec = { version = "1.0.0", features = ["serde"]}
tokio = { version = "1.17.0", features = ["full"]}
futures = "0.3.21"
thiserror = "1.0.30"
pin-project = "1.0.10"
nom = "7.1.0"
petgraph = "0.6.0"
smallvec = { version = "1.8.0", features = ["union", "const_generics", "serde"]}
itertools = "0.10.3"
tokio-serde = { version = "0.8.0", features = ["bincode"]}
tokio-util = { version = "0.7.0", features = ["codec"]}
serde = { version = "1.0.136", features = ["derive"]}
tracing = "0.1.32"
itoa = "1.0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"], optional = true}
anyhow = { version = "1.0.56", optional = true}
funty = { version = "2.0.0", optional = true}
parking_lot = "0.12.0"
rayon = "1.5.1"
rand = { version = "0.8.5", features = ["std"]}
rand_chacha = "0.3.1"
num-integer = "0.1.44"
num-traits = "0.2.15"
rangemap = "1.0.3"
once_cell = "1.13.1"
sub_circuit_impl = {path = "../sub_circuit_impl"}
mpc-channel = {path = "../mpc-channel"}
remoc = { version = "0.10.0", default-features = false, features = ["rch", "codec-bincode"]}

[dev-dependencies]
aes = "0.8.1"
hex-literal = "0.3.4"
gmw = {path = ".", features = ["_integration_tests"]}
bincode = "1.3.3"
clap = { version = "3.1.6", features = ["derive"] }
tracing-appender = "0.2.2"
base64 = "0.13.0"
serde_yaml = "0.9.4"
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false
