[package]
name = "quic-serde-stream"
version = "0.1.0"
edition = "2021"

[features]
__bench = ["anyhow"]

[dependencies]
anyhow = { version = "1.0.86", optional = true }
s2n-quic = "1.37.0"
tokio = { version = "1.37.0", features = ["full"] }
pin-project-lite = "0.2.14"
serde = "1.0.203"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.11", features = ["codec"] }

[dev-dependencies]
anyhow = { version = "1.0.86" }
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
futures = "0.3.30"

[[bench]]
name = "bench"
harness = false
required-features = ["__bench"]
