[package]
name = "seec-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
async-stream = "0.3.3"
bytes = "1.2.1"
futures = "0.3.24"
pin-project = "1.0.12"
serde = { version = "1.0.145"}
erased-serde = "0.3.24"
thiserror = "1.0.31"
tokio = { version = "1.21.1", features = ["macros", "net"]}
tokio-serde = { version = "0.8.0", features = ["bincode"]}
tokio-util = { version = "0.7.3", features = ["codec"]}
tracing = { version = "0.1.36" }
remoc = { workspace = true }
seec-channel-macros = {path = "../seec-channel-macros"}
once_cell = "1.16.0"
indexmap = { version = "1.9.2", features = ["serde"]}
serde_json = "1.0.96"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
serde = { version = "1.0.145", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "time"]}


[[bench]]
name = "bench"
harness = false