[package]
name = "seec-channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
async-stream = "0.3.5"
bytes = "1.5.0"
futures = "0.3.30"
pin-project = "1.1.4"
serde = { version = "1.0.196"}
erased-serde = "0.4.2"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["macros", "net"]}
tokio-serde = { version = "0.9.0", features = ["bincode"]}
tokio-util = { version = "0.7.10", features = ["codec"]}
tracing = { version = "0.1.40" }
remoc = { workspace = true }
seec-channel-macros = {path = "../seec-channel-macros"}
once_cell = "1.19.0"
indexmap = { version = "2.2.2", features = ["serde"]}
serde_json = "1.0.113"
tokio-rustls = "0.25.0"
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
rustls-native-certs = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time"]}


[[bench]]
name = "bench"
harness = false
