[package]
name = "seec-channel"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robin Hundt"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
async-stream = "0.3.5"
bytes = "1.6.0"
futures = "0.3.30"
pin-project = "1.1.5"
serde = { version = "1.0.197" }
erased-serde = "0.4.4"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "net"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = { version = "0.1.40" }
remoc = { workspace = true }
seec-channel-macros = { path = "../seec-channel-macros" }
once_cell = "1.19.0"
indexmap = { version = "2.2.6", features = ["serde"] }
serde_json = "1.0.114"
# remove aws_lc_rs as default crypto provider so that we can enable the provider via a feature (see above)
# and use ring on Windows
tokio-rustls = "0.26.0"
rustls = "0.23.4"
rustls-pemfile = "2.1.1"
rustls-native-certs = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time"] }


[[bench]]
name = "bench"
harness = false
