[package]
name = "seec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_integration_tests = ["tracing-subscriber", "anyhow", "funty"]
bench-api = ["anyhow"]
aby2 = []
silent-ot = ["zappot/silent-ot"]
silent-ot-libote-codes = ["zappot/silent-ot-silver-code","zappot/silent-ot-ea-code", "zappot/silent-ot-ex-conv-code"]

[[example]]
name = "bristol"
required-features = ["bench-api"]

[[example]]
name = "aes_cbc"
required-features = ["bench-api"]

[[example]]
name = "fuse"
required-features = ["bench-api"]


[dependencies]
ahash = "0.8.2"
async-trait = "0.1.53"
async-stream = "0.3.3"
bitvec = { version = "1.0.0", features = ["serde"]}
bytemuck = { version = "1.13.1", features = ["derive"]}
bincode = { version = "1.3.3"}
tokio = { version = "1.17.0", features = ["full"]}
futures = "0.3.21"
thiserror = "1.0.30"
pin-project = "1.0.10"
nom = "7.1.0"
petgraph = { version = "0.6.0", features = ["serde-1"]}
smallvec = { version = "1.8.0", features = ["union", "const_generics", "serde"]}
itertools = "0.10.3"
tokio-serde = { version = "0.8.0", features = ["bincode"]}
tokio-util = { version = "0.7.0", features = ["codec"]}
serde = { version = "1.0.136", features = ["derive"]}
tracing = "0.1.32"
itoa = "1.0.1"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"], optional = true}
anyhow = { version = "1.0.56", optional = true}
funty = { version = "2.0.0", optional = true}
parking_lot = { version = "0.12.0", features = ["arc_lock"]}
rayon = "1.5.1"
rand = { version = "0.8.5", features = ["std"]}
rand_chacha = "0.3.1"
num-integer = "0.1.44"
num-traits = "0.2.15"
rangemap = "1.0.3"
once_cell = "1.13.1"
seec-macros = {path = "../seec-macros"}
seec-channel = {path = "../seec-channel"}
remoc = { workspace = true }
zappot = {path = "../zappot"}
typemap = "0.3.3"
mpc-bitmatrix = {path = "../mpc-bitmatrix"}
either = "1.8.1"
flatbuffers = "23.5.26"

[dev-dependencies]
aes = "0.8.1"
cbc = { version = "0.1.2", features = ["alloc", "block-padding"]}
hex = "0.4.3"
hex-literal = "0.3.4"
seec = {path = ".", features = ["_integration_tests"]}
bincode = "1.3.3"
clap = { workspace = true }
tracing-appender = "0.2.2"
base64 = "0.13.0"
serde_yaml = "0.9.4"
criterion = "0.3"
serde_json = "1.0.91"

[[bench]]
name = "bench_main"
harness = false

[[test]]
name = "boolean_aby2"
required-features = ["aby2"]

[[test]]
name = "tensor_aby2"
required-features = ["aby2"]
