[package]
name = "seec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_integration_tests = ["tracing-subscriber", "anyhow", "funty"]
bench-api = ["anyhow"]
aby2 = []
# depends on AVX2, therefore not platform idepedent
silent-ot-quasi-cyclic = ["zappot/silent-ot-quasi-cyclic-code"]
# using the libote codes should work on ARM
silent-ot = ["zappot/silent-ot-libote-codes"]

[[example]]
name = "bristol"
required-features = ["bench-api"]

[[example]]
name = "aes_cbc"
required-features = ["bench-api"]

[[example]]
name = "fuse"
required-features = ["bench-api"]


[dependencies]
ahash = "0.8.7"
async-trait = "0.1.77"
async-stream = "0.3.5"
bitvec = { version = "1.0.1", features = ["serde"]}
bytemuck = { version = "1.14.1", features = ["derive"]}
bincode = { version = "1.3.3"}
tokio = { version = "1.36.0", features = ["full"]}
futures = "0.3.30"
thiserror = "1.0.56"
pin-project = "1.1.4"
nom = "7.1.3"
petgraph = { version = "0.6.4", features = ["serde-1"]}
smallvec = { version = "1.13.1", features = ["union", "const_generics", "serde"]}
itertools = "0.12.1"
tokio-serde = { version = "0.9.0", features = ["bincode"]}
tokio-util = { version = "0.7.10", features = ["codec"]}
serde = { version = "1.0.196", features = ["derive"]}
tracing = "0.1.40"
itoa = "1.0.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"], optional = true}
anyhow = { version = "1.0.79", optional = true}
funty = { version = "2.0.0", optional = true}
parking_lot = { version = "0.12.1", features = ["arc_lock"]}
rayon = "1.8.1"
rand = { version = "0.8.5", features = ["std"]}
rand_chacha = "0.3.1"
num-integer = "0.1.45"
num-traits = "0.2.17"
rangemap = "1.4.0"
once_cell = "1.19.0"
seec-macros = {path = "../seec-macros"}
seec-channel = {path = "../seec-channel"}
remoc = { workspace = true }
zappot = {path = "../zappot"}
typemap = "0.3.3"
seec-bitmatrix = {path = "../seec-bitmatrix"}
either = "1.9.0"
flatbuffers = "23.5.26"

[dev-dependencies]
aes = "0.8.3"
cbc = { version = "0.1.2", features = ["alloc", "block-padding"]}
hex = "0.4.3"
hex-literal = "0.4.1"
seec = {path = ".", features = ["_integration_tests"]}
bincode = "1.3.3"
clap = { workspace = true }
tracing-appender = "0.2.3"
base64 = "0.21.7"
serde_yaml = "0.9.31"
criterion = "0.5"
serde_json = "1.0.113"

[[bench]]
name = "bench_main"
harness = false

[[test]]
name = "boolean_aby2"
required-features = ["aby2"]

[[test]]
name = "tensor_aby2"
required-features = ["aby2"]
