[package]
name = "seec"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Robin Hundt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
_integration_tests = ["tracing-subscriber", "anyhow", "funty"]
# Enables the benchmarking API
bench-api = ["anyhow"]
# Enables the ABY2 implementation
aby2 = []
# Enables the Silent-OT QuasiCyclic code. depends on AVX2, therefore not platform independent.
silent-ot-quasi-cyclic = ["zappot/silent-ot-quasi-cyclic-code"]
# Enables the Silent-OT codes from libOTe. These work on ARM.
silent-ot = ["zappot/silent-ot-libote-codes"]

[[example]]
name = "bristol"
required-features = ["bench-api"]
doc-scrape-examples = true

[[example]]
name = "aes_cbc"
required-features = ["bench-api"]

[[example]]
name = "fuse"
required-features = ["bench-api"]


[dependencies]
ahash = "0.8.7"
async-trait = "0.1.77"
async-stream = "0.3.5"
bitvec = { version = "1.0.1", features = ["serde"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
bincode = { version = "1.3.3" }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0.58"
pin-project = "1.1.5"
nom = "7.1.3"
petgraph = { version = "0.6.4", features = ["serde-1"] }
smallvec = { version = "1.13.2", features = ["union", "const_generics", "serde"] }
itertools = "0.12.1"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
itoa = "1.0.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"], optional = true }
anyhow = { version = "1.0.81", optional = true }
funty = { version = "2.0.0", optional = true }
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rayon = "1.10.0"
rand = { version = "0.8.5", features = ["std"] }
rand_chacha = "0.3.1"
num-integer = "0.1.46"
num-traits = "0.2.18"
rangemap = "1.5.1"
once_cell = "1.19.0"
seec-macros = { path = "../seec-macros" }
seec-channel = { path = "../seec-channel" }
remoc = { workspace = true }
zappot = { path = "../zappot" }
typemap = "0.3.3"
typemap_rev = "0.3.0"
seec-bitmatrix = { path = "../seec-bitmatrix" }
either = "1.10.0"
flatbuffers = "23.5.26"

[dev-dependencies]
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc", "block-padding"] }
hex = "0.4.3"
hex-literal = "0.4.1"
seec = { path = ".", features = ["_integration_tests"] }
bincode = "1.3.3"
clap = { workspace = true }
tracing-appender = "0.2.3"
base64 = "0.22.0"
serde_yaml = "0.9.34"
criterion = "0.5"
serde_json = "1.0.114"

[[bench]]
name = "bench_main"
harness = false

[[test]]
name = "boolean_aby2"
required-features = ["aby2"]

[[test]]
name = "tensor_aby2"
required-features = ["aby2"]
