[package]
name = "zappot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
silent-ot-quasi-cyclic-code = ["aligned-vec", "bitpolymul"]
# this feature needs libote which provides bindings to libOTe
# but since gcc seems to not care about backwards compat, this is prone to break...
silent-ot-silver-code = ["libote", "aligned-vec"]
silent-ot-ea-code = ["libote", "aligned-vec"]
silent-ot-ex-conv-code = ["libote", "aligned-vec"]
silent-ot-libote-codes = ["silent-ot-silver-code", "silent-ot-ea-code", "silent-ot-ex-conv-code"]

[dependencies]
aes = "0.8.4"
async-trait = "0.1.79"
aligned-vec = { path = "../aligned-vec", optional = true }
bitpolymul = { path = "../bitpolymul", optional = true }
bitvec = "1.0.1"
bytemuck = { version = "1.15.0", features = ["derive", "extern_crate_alloc"] }
crossbeam-channel = "0.5.12"
curve25519-dalek = { version = "4.1.2", features = ["serde", "rand_core", "precomputed-tables"] }
futures = { version = "0.3.30", features = ["executor"] }
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
blake2 = "0.10.6"
# this currently needs to be kept at 0.14.7, as aes and blake depend on this version
generic-array = { version = "0.14.7", features = ["serde"] }
pin-project = "1.1.5"
seec-channel = { path = "../seec-channel" }
num-integer = "0.1.46"
num-traits = "0.2.18"
num-prime = { git = "https://github.com/robinhundt/num-prime.git" }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["sync", "macros", "net"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
thiserror = "1.0.58"
tracing = "0.1.40"
remoc = { workspace = true }
libote = { path = "../../libs/libote-rs", optional = true }
seec-bitmatrix = { path = "../seec-bitmatrix", features = ["rayon"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
clap = { version = "4.5.3", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
ocelot = { git = "https://github.com/GaloisInc/swanky.git" }
scuttlebutt = { git = "https://github.com/GaloisInc/swanky.git" }
rand_core_5_1 = { version = "0.5.1", package = "rand_core" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[build-dependencies]
cc = "1.0.90"

[[bench]]
name = "bench_main"
harness = false
required-features = ["silent-ot-libote-codes", "silent-ot-quasi-cyclic-code"]

[[example]]
name = "silent_ot"
required-features = ["silent-ot-libote-codes", "silent-ot-quasi-cyclic-code"]
